fix: horizontal overflow issue on `popular-searches`

--- a/src/sections/popular-searches/styles.module.scss
+++ b/src/sections/popular-searches/styles.module.scss
@@ -3,6 +3,7 @@
   padding-inline: 1.5rem;
 
   max-width: 71.25rem;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
